WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46667
object-deletion-behaviour.html fails with mesa backend
https://bugs.webkit.org/show_bug.cgi?id=46667
Summary
object-deletion-behaviour.html fails with mesa backend
Zhenyao Mo
Reported
2010-09-27 15:45:37 PDT
Disable it for now in
r68431
. Need to investigate this weird failure.
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#useWebKitCanary=true&tests=fast%2Fcanvas%2Fwebgl%2Fobject-deletion-behaviour.html
Attachments
patch
(1.39 KB, patch)
2010-10-19 16:03 PDT
,
Zhenyao Mo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2010-10-19 15:55:51 PDT
I did some testing, and it turns out to be a mesa bug. I filed it to mesa:
https://bugs.freedesktop.org/show_bug.cgi?id=30993
In the meantime, I'll do a work-around to get the test pass.
Zhenyao Mo
Comment 2
2010-10-19 16:03:00 PDT
Created
attachment 71216
[details]
patch This fix is to work around the mesa bug, but it is good/correct behavior anyway. Tested, with this fix, the test will pass with mesa backend.
Kenneth Russell
Comment 3
2010-10-26 14:44:21 PDT
Comment on
attachment 71216
[details]
patch OK.
Zhenyao Mo
Comment 4
2010-10-27 10:14:40 PDT
Comment on
attachment 71216
[details]
patch Clearing flags on attachment: 71216 Committed
r70663
: <
http://trac.webkit.org/changeset/70663
>
Zhenyao Mo
Comment 5
2010-10-27 10:14:44 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-10-27 14:04:12 PDT
http://trac.webkit.org/changeset/70663
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug