2010-10-27  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        object-deletion-behaviour.html fails with mesa backend
        https://bugs.webkit.org/show_bug.cgi?id=46667

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::getFramebufferAttachmentParameter): If object_type is 0, we return early because object_name should be always be 0.


Canonical link: https://commits.webkit.org/61184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70663 268f45cc-cd09-0410-ab3c-d52691b4dbfc